--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,31 +12,31 @@
   "lang": "it",
   "icons": [
     {
-      "src": "/pwa-icon-1753573265.png?v=10",
+      "src": "/icon-96x96.png?v=10",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa-icon-1753573265.png?v=10",
+      "src": "/icon-144x144.png?v=10",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa-icon-1753573265.png?v=10",
+      "src": "/icon-192x192.png?v=10",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa-icon-1753573265.png?v=10",
+      "src": "/icon-512x512.png?v=10",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa-icon-1753573265.png?v=10",
+      "src": "/icon-192x192.png?v=10",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
