--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.68",
+    "@iconify-json/tabler": "^1.2.23",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
@@ -86,7 +88,9 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "unplugin-icons": "^22.3.0",
+    "unplugin-vue-components": "^29.1.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
