--- a/package.json
+++ b/package.json
@@ -89,8 +89,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "unplugin-icons": "^22.3.0",
-    "unplugin-vue-components": "^29.1.0"
+    "unplugin-icons": "^22.3.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
