--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
     "db:push": "drizzle-kit push",
     "backup": "node scripts/backup-system.js create",
     "backup:list": "node scripts/backup-system.js list",
@@ -73,6 +76,7 @@
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.68",
     "@iconify-json/tabler": "^1.2.23",
+    "@playwright/test": "^1.55.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
