--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx --env-file=.env.development server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "preview": "vite preview --port 4173 --host",
+    "start": "node dist/index.js",
     "check": "tsc",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
+    "guard:lens": "npm run guard:lens:props && npm run guard:lens:zindex",
+    "guard:lens:props": "! grep -r --include='*.tsx' --include='*.ts' -E '(isOpen=|visible=)' client/src/components/search client/src/components/ui || (echo 'ERROR: Usa SOLO open (boolean) come prop di visibilità' && exit 1)",
+    "guard:lens:zindex": "! grep -r --include='*.tsx' --include='*.ts' -E 'z-\\[[0-9]+\\]' client/src/components/search client/src/components/ui || (echo 'ERROR: Usa SOLO z-index tokens da styles/tokens/zIndex.ts' && exit 1)",
     "db:push": "drizzle-kit push",
     "backup": "node scripts/backup-system.js create",
     "backup:list": "node scripts/backup-system.js list",
