--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx --env-file=.env.development server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:frontend": "vite build",
     "preview": "vite preview --port 4173 --host",
     "start": "node dist/index.js",
     "check": "tsc",
